--- a/common/build.gradle
+++ b/common/build.gradle
@@ -31,22 +31,22 @@ dependencies {
     api "fuzs.forgeconfigapiport:forgeconfigapiport-common:${forge_config_api_version}"
 }
 
-publishing {
-    publications {
-        mavenCommon(MavenPublication) {
-            artifactId = mod_id + "-" + project.name
-            from components.java
-        }
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        var path = System.getenv("LOCAL_MAVEN")
-        if (path != null) {
-            maven {
-                name = 'local'
-                url = uri(path + "/maven")
-            }
-        }
-    }
-}
+//publishing {
+//    publications {
+//        mavenCommon(MavenPublication) {
+//            artifactId = mod_id + "-" + project.name
+//            from components.java
+//        }
+//    }
+//
+//    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
+//    repositories {
+//        var path = System.getenv("LOCAL_MAVEN")
+//        if (path != null) {
+//            maven {
+//                name = 'local'
+//                url = uri(path + "/maven")
+//            }
+//        }
+//    }
+//}
