--- a/gradle.properties
+++ b/gradle.properties
@@ -41,6 +41,9 @@ forge_config_api_version=8.0.0
 cloth_config_version = 11.0.99
 create_fabric_version = 0.5.1-f-build.1335+mc1.20.1
 
+mythicmounts_fabric_version = 1.20.1-7.2
+patchouli_fabric_version = 1.20.1-84-FABRIC
+geckolib_fabric_version = 4.4.9
 # forge
 forge_version=1.20.1-47.2.1
 
@@ -50,3 +53,9 @@ probejs_forge_id=5227399
 create_forge_version=1.20.1:0.5.1.f-26:slim
 flywheel_forge_version=1.20.1:0.6.10-7
 registrate_forge_version=MC1.20-1.3.3
+
+mythicmounts_forge_version = 20.1-7.4.2-forge
+patchouli_forge_version = 1.20.1-84-FORGE
+geckolib_forge_version = RBA7lJaW
+
+#not sure where that version slug comes from
